[package]
name = "soroban-hello-world-contract-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.soroban-sdk]
version = "0.7.0"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "9383a6ae6f21c24cfe74a53759949b2c83d53e78"

[dependencies.stellar-xdr]
version = "0.0.15"
git = "https://github.com/stellar/rs-stellar-xdr"
rev = "5b807e5652c1efe6c21d88ba8bca1b76254c4897"
default-features = false
features = ["next", "std", "arbitrary"]

[dependencies.soroban-hello-world-contract]
path = ".."
features = ["testutils"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
